--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -13,8 +13,8 @@
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
 
-		<li class="game game-top-top winner">ASHOD! &<span>10</span></li>
-		<li class="game game-top-bottom winner">Ghadi "King Pong" Sayegh</li>
+		<li class="game game-top-top">ASHOD! &<span>10</span></li>
+		<li class="game game-top-bottom">Ghadi "King Pong" Sayegh</li>
 		<li class="game game-spacer">&nbsp;</li>
 		<li class="game game-bottom-top">SMASHLEY! Bonnard &<span>0</span></li>
 		<li class="game game-bottom-bottom">Juan "illegal serve" Perrier</li>
