switch and clean up names

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -4,8 +4,8 @@
 	<ul class="round round-1">
 		<li class="spacer">&nbsp;</li>
 		<div class="">
-		<li class="game game-top-top">David "I'm better than" Zhu<span>0</span></li>
-		<li class="game game-top-bottom">& Sean Gee </li>
+		<li class="game game-top-top">David "I'm better than" Zhu &<span>0</span></li>
+		<li class="game game-top-bottom">Sean "the wrecking ball" Gee </li>
 		<li class="game game-spacer">&nbsp;</li>
 		<li class="game game-bottom-top">Alex "Drapes" Curtin &<span>0</span></li>
 		<li class="game game-bottom-bottom">Calvin "Ancient Chinese Secret" Wang</li>
@@ -34,8 +34,8 @@
 		<li class="game game-top-top">Ashley "Eh" Nelson &<span>0</span></li>
 		<li class="game game-top-bottom ">Peggy "Pegster" Ng</li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom-top">Grant "Master Splinter" Empey<span>0</span></li>
-		<li class="game game-bottom-bottom">Andy "Slow hands" Trejo</li>
+		<li class="game game-bottom-top">Andy "Slow hands" Trejo<span>0</span></li>
+		<li class="game game-bottom-bottom">Grant "Master Splinter" Empey</li>
 
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
@@ -70,8 +70,8 @@
 		<li class="game game-top-top">Gabe "Ghost" Rinaldi &<span>0</span></li>
 		<li class="game game-top-bottom ">Somesh "Newbie" Kumar</li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom-top">Andrew "GoonSquad" Martin<span>0</span></li>
-		<li class="game game-bottom-bottom">& Anya Tran</li>
+		<li class="game game-bottom-top">Anya Tran &<span>0</span></li>
+		<li class="game game-bottom-bottom">Andrew "GoonSquad" Martin</li>
 
 		<li class="spacer">&nbsp;</li>
 	</ul>
