--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -32,7 +32,7 @@
 		<li class="spacer">&nbsp;</li>
 
 		<li class="game game-top-top">Ashley "Eh" Nelson &<span>0</span></li>
-		<li class="game game-top-bottom ">Peggy "Pegster" Ng</li>
+		<li class="game game-top-bottom ">Nilou Ghazizadeh</li>
 		<li class="game game-spacer"><span class="time">1:45 - Round 1 Game 4</span></li>
 		<li class="game game-bottom-top">Andy "Slow hands" Trejo<span>0</span></li>
 		<li class="game game-bottom-bottom">Grant "Master Splinter" Empey</li>
