winner Alex/Calvin

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -3,22 +3,22 @@
 <main id="tournament">
 	<ul class="round round-1">
 		<li class="spacer">&nbsp;</li>
-		<div class="">
+
 		<li class="game game-top-top">David "I'm better than" Zhu &<span>0</span></li>
 		<li class="game game-top-bottom">Sean "the wrecking ball" Gee </li>
 		<li class="game game-spacer"><span class="time">1:00 - Round 1 Game 1</span></li>
-		<li class="game game-bottom-top">Alex "Drapes" Curtin &<span>0</span></li>
-		<li class="game game-bottom-bottom">Calvin "Ancient Chinese Secret" Wang</li>
-    </div>
-		<li class="spacer">&nbsp;</li>
-		<li class="spacer">&nbsp;</li>
+		<li class="game game-bottom-top winner">Alex "Drapes" Curtin &<span>0</span></li>
+		<li class="game game-bottom-bottom winner">Calvin "Ancient Chinese Secret" Wang</li>
 
+		<li class="spacer">&nbsp;</li>
+		<li class="spacer">&nbsp;</li>
+		<div class="current">
 		<li class="game game-top-top">Russel "Mania" Valera &<span>0</span></li>
 		<li class="game game-top-bottom ">Roschelle "give 'em hell" Lowe</li>
 		<li class="game game-spacer"><span class="time">1:15 - Round 1 Game 6</span></li>
 		<li class="game game-bottom-top">Kris "Dr." Drey &<span>0</span></li>
 		<li class="game game-bottom-bottom">Larry "Elizondo Mountain Dew Herbert Camacho" Gordon</li>
-
+		</div>
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
 
