winner Kris/Larry

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -12,22 +12,22 @@
 
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
-		<div class="current">
-		<li class="game game-top-top">Russel "Mania" Valera &<span>0</span></li>
+
+		<li class="game game-top-top">Russel "Mania" Valera &<span>6</span></li>
 		<li class="game game-top-bottom ">Roschelle "give 'em hell" Lowe</li>
 		<li class="game game-spacer"><span class="time">1:15 - Round 1 Game 6</span></li>
-		<li class="game game-bottom-top">Kris "Dr." Drey &<span>0</span></li>
-		<li class="game game-bottom-bottom">Larry "Elizondo Mountain Dew Herbert Camacho" Gordon</li>
-		</div>
-		<li class="spacer">&nbsp;</li>
-		<li class="spacer">&nbsp;</li>
+		<li class="game game-bottom-top winner">Kris "Dr." Drey &<span>21</span></li>
+		<li class="game game-bottom-bottom winner">Larry "Elizondo Mountain Dew Herbert Camacho" Gordon</li>
 
+		<li class="spacer">&nbsp;</li>
+		<li class="spacer">&nbsp;</li>
+<div class="current">
 		<li class="game game-top-top">Matt "Champion." McLean &<span>0</span></li>
 		<li class="game game-top-bottom ">William "Tall-Man" Springer</li>
 		<li class="game game-spacer"><span class="time">1:30 - Round 1 Game 3</span></li>
 		<li class="game game-bottom-top">Peter McInerney &<span>0</span></li>
 		<li class="game game-bottom-bottom">Jason Spangenthal</li>
-
+</div>
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
 
