winner Matt/William

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -21,22 +21,22 @@
 
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
-<div class="current">
-		<li class="game game-top-top">Matt "Champion." McLean &<span>0</span></li>
-		<li class="game game-top-bottom ">William "Tall-Man" Springer</li>
-		<li class="game game-spacer"><span class="time">1:30 - Round 1 Game 3</span></li>
-		<li class="game game-bottom-top">Peter McInerney &<span>0</span></li>
-		<li class="game game-bottom-bottom">Jason Spangenthal</li>
-</div>
-		<li class="spacer">&nbsp;</li>
-		<li class="spacer">&nbsp;</li>
 
+		<li class="game game-top-top winner">Matt "Champion." McLean &<span>21</span></li>
+		<li class="game game-top-bottom winner">William "Tall-Man" Springer</li>
+		<li class="game game-spacer"><span class="time">1:30 - Round 1 Game 3</span></li>
+		<li class="game game-bottom-top">Peter McInerney &<span>17</span></li>
+		<li class="game game-bottom-bottom">Jason Spangenthal</li>
+
+		<li class="spacer">&nbsp;</li>
+		<li class="spacer">&nbsp;</li>
+<div class="current">
 		<li class="game game-top-top">Ashley "Eh" Nelson &<span>0</span></li>
 		<li class="game game-top-bottom ">Nilou Ghazizadeh</li>
 		<li class="game game-spacer"><span class="time">1:45 - Round 1 Game 4</span></li>
 		<li class="game game-bottom-top">Andy "Slow hands" Trejo<span>0</span></li>
 		<li class="game game-bottom-bottom">Grant "Master Splinter" Empey</li>
-
+</div>
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
 
