winner Andy/Grant

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -30,22 +30,22 @@
 
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
-<div class="current">
-		<li class="game game-top-top">Ashley "Eh" Nelson &<span>0</span></li>
+
+		<li class="game game-top-top">Ashley "Eh" Nelson &<span>17</span></li>
 		<li class="game game-top-bottom ">Nilou Ghazizadeh</li>
 		<li class="game game-spacer"><span class="time">1:45 - Round 1 Game 4</span></li>
-		<li class="game game-bottom-top">Andy "Slow hands" Trejo<span>0</span></li>
-		<li class="game game-bottom-bottom">Grant "Master Splinter" Empey</li>
-</div>
-		<li class="spacer">&nbsp;</li>
-		<li class="spacer">&nbsp;</li>
+		<li class="game game-bottom-top winner">Andy "Slow hands" Trejo<span>21</span></li>
+		<li class="game game-bottom-bottom winner">Grant "Master Splinter" Empey</li>
 
+		<li class="spacer">&nbsp;</li>
+		<li class="spacer">&nbsp;</li>
+<div class="current">
 		<li class="game game-top-top">Conny "what technique" Wu &<span>0</span></li>
 		<li class="game game-top-bottom ">Charlyn "unicoooorn" Gonda</li>
 		<li class="game game-spacer"><span class="time">2:00 - Round 1 Game 5</span></li>
 		<li class="game game-bottom-top">Chantal "Hit Girl" Anderson &<span>0</span></li>
 		<li class="game game-bottom-bottom">Nicolas "Oh la la so deep" Cabrera</li>
-
+</div>
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
 
