--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -39,22 +39,22 @@
 
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
-<div class="current">
-		<li class="game game-top-top">Conny "what technique" Wu &<span>0</span></li>
+
+		<li class="game game-top-top">Conny "what technique" Wu &<span>5</span></li>
 		<li class="game game-top-bottom ">Charlyn "unicoooorn" Gonda</li>
 		<li class="game game-spacer"><span class="time">2:00 - Round 1 Game 5</span></li>
-		<li class="game game-bottom-top">Chantal "Hit Girl" Anderson &<span>0</span></li>
-		<li class="game game-bottom-bottom">Nicolas "Oh la la so deep" Cabrera</li>
-</div>
-		<li class="spacer">&nbsp;</li>
-		<li class="spacer">&nbsp;</li>
+		<li class="game game-bottom-top winner">Chantal "Hit Girl" Anderson &<span>21</span></li>
+		<li class="game game-bottom-bottom winner">Nicolas "Oh la la so deep" Cabrera</li>
 
+		<li class="spacer">&nbsp;</li>
+		<li class="spacer">&nbsp;</li>
+<div class="current">
 		<li class="game game-top-top">ASHOD! &<span>0</span></li>
 		<li class="game game-top-bottom">Ghadi "King Pong" Sayegh</li>
 		<li class="game game-spacer"><span class="time">2:15 - Round 2 Game 2</span></li>
 		<li class="game game-bottom-top">SMASHLEY! Bonnard &<span>0</span></li>
 		<li class="game game-bottom-bottom">Juan "illegal serve" Perrier</li>
-
+</div>
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
 
