winner reed/justin

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -48,31 +48,31 @@
 
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
-<div class="current">
+
 		<li class="game game-top-top">ASHOD! &<span>0</span></li>
 		<li class="game game-top-bottom">Ghadi "King Pong" Sayegh</li>
 		<li class="game game-spacer"><span class="time">2:15 - Round 2 Game 2</span></li>
 		<li class="game game-bottom-top">SMASHLEY! Bonnard &<span>0</span></li>
 		<li class="game game-bottom-bottom">Juan "illegal serve" Perrier</li>
-</div>
+
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
 
-		<li class="game game-top-top">Reed "deer" Silverstein &<span>0</span></li>
-		<li class="game game-top-bottom ">Justin "the rookie" Wang</li>
+		<li class="game game-top-top winner">Reed "deer" Silverstein &<span>21</span></li>
+		<li class="game game-top-bottom winner">Justin "the rookie" Wang</li>
 		<li class="game game-spacer"><span class="time">2:30 - Round 1 Game 7</span></li>
-		<li class="game game-bottom-top">Lindsey "Ping Me" Thomas &<span>0</span></li>
+		<li class="game game-bottom-top">Lindsey "Ping Me" Thomas &<span>15</span></li>
 		<li class="game game-bottom-bottom">Alec "Gladiator" Raeside</li>
 
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
-
+<div class="current">
 		<li class="game game-top-top">Gabe "Ghost" Rinaldi &<span>0</span></li>
 		<li class="game game-top-bottom ">Somesh "Newbie" Kumar</li>
 		<li class="game game-spacer"><span class="time">2:45 - Round 1 Game 8</span></li>
 		<li class="game game-bottom-top">Anya Tran &<span>0</span></li>
 		<li class="game game-bottom-bottom">Andrew "GoonSquad" Martin</li>
-
+</div>
 		<li class="spacer">&nbsp;</li>
 	</ul>
 	<ul class="round round-2">
