--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -49,10 +49,10 @@
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
 
-		<li class="game game-top-top">ASHOD! &<span>0</span></li>
-		<li class="game game-top-bottom">Ghadi "King Pong" Sayegh</li>
+		<li class="game game-top-top winner">ASHOD! &<span>21</span></li>
+		<li class="game game-top-bottom winner">Ghadi "King Pong" Sayegh</li>
 		<li class="game game-spacer"><span class="time">2:15 - Round 2 Game 2</span></li>
-		<li class="game game-bottom-top">SMASHLEY! Bonnard &<span>0</span></li>
+		<li class="game game-bottom-top">SMASHLEY! Bonnard &<span>19</span></li>
 		<li class="game game-bottom-bottom">Juan "illegal serve" Perrier</li>
 
 		<li class="spacer">&nbsp;</li>
@@ -66,24 +66,24 @@
 
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
-<div class="current">
-		<li class="game game-top-top">Gabe "Ghost" Rinaldi &<span>0</span></li>
-		<li class="game game-top-bottom ">Somesh "Newbie" Kumar</li>
+
+		<li class="game game-top-top winner">Gabe "Ghost" Rinaldi &<span>21</span></li>
+		<li class="game game-top-bottom winner">Somesh "Newbie" Kumar</li>
 		<li class="game game-spacer"><span class="time">2:45 - Round 1 Game 8</span></li>
-		<li class="game game-bottom-top">Anya Tran &<span>0</span></li>
+		<li class="game game-bottom-top">Anya Tran &<span>11/span></li>
 		<li class="game game-bottom-bottom">Andrew "GoonSquad" Martin</li>
-</div>
+
 		<li class="spacer">&nbsp;</li>
 	</ul>
 	<ul class="round round-2">
 		<li class="spacer">&nbsp;</li>
-
-		<li class="game game-top-top pending">winning<span>0</span></li>
-		<li class="game game-top-bottom pending">team </li>
-		<li class="game game-spacer"><span class="time">3:00 - Round 2 Game 1</span></li>
-		<li class="game game-bottom-top pending">winning<span>0</span></li>
-		<li class="game game-bottom-bottom pending">team</li>
-
+<div class="current">
+	<li class="game game-top-top">David "I'm better than" Zhu &<span>0</span></li>
+	<li class="game game-top-bottom">Sean "the wrecking ball" Gee </li>
+	<li class="game game-spacer"><span class="time">1:00 - Round 1 Game 1</span></li>
+	<li class="game game-bottom-top">Alex "Drapes" Curtin &<span>0</span></li>
+	<li class="game game-bottom-bottom">Calvin "Ancient Chinese Secret" Wang</li>
+</div>
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
 
