--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -70,7 +70,7 @@
 		<li class="game game-top-top winner">Gabe "Ghost" Rinaldi &<span>21</span></li>
 		<li class="game game-top-bottom winner">Somesh "Newbie" Kumar</li>
 		<li class="game game-spacer"><span class="time">2:45 - Round 1 Game 8</span></li>
-		<li class="game game-bottom-top">Anya Tran &<span>11/span></li>
+		<li class="game game-bottom-top">Anya Tran &<span>11</span></li>
 		<li class="game game-bottom-bottom">Andrew "GoonSquad" Martin</li>
 
 		<li class="spacer">&nbsp;</li>
