--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -77,40 +77,40 @@
 	</ul>
 	<ul class="round round-2">
 		<li class="spacer">&nbsp;</li>
-<div class="current">
-	<li class="game game-top-top">David "I'm better than" Zhu &<span>0</span></li>
-	<li class="game game-top-bottom">Sean "the wrecking ball" Gee </li>
+
+	<li class="game game-top-top winner">Alex "Drapes" Curtin&<span>21</span></li>
+	<li class="game game-top-bottom winner">Calvin "Ancient Chinese Secret" Wang </li>
 	<li class="game game-spacer"><span class="time">1:00 - Round 2 Game 1</span></li>
-	<li class="game game-bottom-top">Alex "Drapes" Curtin &<span>0</span></li>
-	<li class="game game-bottom-bottom">Calvin "Ancient Chinese Secret" Wang</li>
-</div>
+	<li class="game game-bottom-top">Kris "Dr." Drey &<span>14</span></li>
+	<li class="game game-bottom-bottom">Larry "Elizondo Mountain Dew Herbert Camacho" Gordon</li>
+
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
 
-		<li class="game game-top-top pending">winning<span>0</span></li>
-		<li class="game game-top-bottom pending">team </li>
+		<li class="game game-top-top ">Matt "Champion." McLean<span>21</span></li>
+		<li class="game game-top-bottom ">William "Tall-Man" Springer </li>
 		<li class="game game-spacer"><span class="time">3:15 - Round 2 Game 2</span></li>
-		<li class="game game-bottom-top pending">winning<span>0</span></li>
-		<li class="game game-bottom-bottom pending">team</li>
+		<li class="game game-bottom-top winner">Andy "Slow hands" Trejo<span>24</span></li>
+		<li class="game game-bottom-bottom winner">Grant "Master Splinter" Empey</li>
 
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
 
-		<li class="game game-top-top pending">winning<span>0</span></li>
-		<li class="game game-top-bottom pending">team </li>
+		<li class="game game-top-top winner">Chantal "Hit Girl" Anderson <span>21</span></li>
+		<li class="game game-top-bottom winner">Nicolas "Oh la la so deep" Cabrera </li>
 		<li class="game game-spacer"><span class="time">3:30 - Round 2 Game 3</span></li>
-		<li class="game game-bottom-top pending">winning<span>0</span></li>
-		<li class="game game-bottom-bottom pending">team</li>
+		<li class="game game-bottom-top ">ASHOD!<span>18</span></li>
+		<li class="game game-bottom-bottom ">Ghadi "King Pong" Sayegh</li>
 
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
-
-		<li class="game game-top-top pending">winning<span>0</span></li>
-		<li class="game game-top-bottom pending">team </li>
+<div class="current">
+		<li class="game game-top-top">Reed "deer" Silverstein<span>0</span></li>
+		<li class="game game-top-bottom">Justin "the rookie" Wang </li>
 		<li class="game game-spacer"><span class="time">3:45 - Round 2 Game 4</span></li>
-		<li class="game game-bottom-top pending">winning<span>0</span></li>
-		<li class="game game-bottom-bottom pending">team</li>
-
+		<li class="game game-bottom-top">Gabe "Ghost" Rinaldi<span>0</span></li>
+		<li class="game game-bottom-bottom">Somesh "Newbie" Kumar</li>
+</div>
 		<li class="spacer">&nbsp;</li>
 	</ul>
 	<ul class="round round-3">
