--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -104,24 +104,24 @@
 
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
-<div class="current">
-		<li class="game game-top-top">Reed "deer" Silverstein<span>0</span></li>
-		<li class="game game-top-bottom">Justin "the rookie" Wang </li>
+
+		<li class="game game-top-top winner">Reed "deer" Silverstein<span>21</span></li>
+		<li class="game game-top-bottom winner">Justin "the rookie" Wang </li>
 		<li class="game game-spacer"><span class="time">3:45 - Round 2 Game 4</span></li>
-		<li class="game game-bottom-top">Gabe "Ghost" Rinaldi<span>0</span></li>
+		<li class="game game-bottom-top">Gabe "Ghost" Rinaldi<span>12</span></li>
 		<li class="game game-bottom-bottom">Somesh "Newbie" Kumar</li>
-</div>
+
 		<li class="spacer">&nbsp;</li>
 	</ul>
 	<ul class="round round-3">
 		<li class="spacer">&nbsp;</li>
-
-		<li class="game game-top-top pending">winning<span>0</span></li>
-		<li class="game game-top-bottom pending">team </li>
+<div class="current">
+		<li class="game game-top-top ">Alex "Drapes" Curtin &<span>0</span></li>
+		<li class="game game-top-bottom ">Calvin "Ancient Chinese Secret" Wang</li>
 		<li class="game game-spacer"><span class="time">4:00 - Round 3 Game 1</span></li>
-		<li class="game game-bottom-top pending">winning<span>0</span></li>
-		<li class="game game-bottom-bottom pending">team</li>
-
+		<li class="game game-bottom-top ">Andy "Slow hands" Trejo<span>0</span></li>
+		<li class="game game-bottom-bottom ">Grant "Master Splinter" Empey</li>
+</div>
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
 
