--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -115,32 +115,32 @@
 	</ul>
 	<ul class="round round-3">
 		<li class="spacer">&nbsp;</li>
-<div class="current">
-		<li class="game game-top-top ">Alex "Drapes" Curtin &<span>0</span></li>
+
+		<li class="game game-top-top ">Alex "Drapes" Curtin &<span>19</span></li>
 		<li class="game game-top-bottom ">Calvin "Ancient Chinese Secret" Wang</li>
 		<li class="game game-spacer"><span class="time">4:00 - Round 3 Game 1</span></li>
-		<li class="game game-bottom-top ">Andy "Slow hands" Trejo<span>0</span></li>
-		<li class="game game-bottom-bottom ">Grant "Master Splinter" Empey</li>
-</div>
+		<li class="game game-bottom-top winner">Andy "Slow hands" Trejo<span>21</span></li>
+		<li class="game game-bottom-bottom winner">Grant "Master Splinter" Empey</li>
+
 		<li class="spacer">&nbsp;</li>
 		<li class="spacer">&nbsp;</li>
 
-		<li class="game game-top-top pending">winning<span>0</span></li>
-		<li class="game game-top-bottom pending">team </li>
+		<li class="game game-top-top winner">Chantal "Hit Girl" Anderson<span>21</span></li>
+		<li class="game game-top-bottom winner">Nicolas "Oh la la so deep" Cabrera </li>
 		<li class="game game-spacer"><span class="time">4:15 - Round 3 Game 2</span></li>
-		<li class="game game-bottom-top pending">winning<span>0</span></li>
-		<li class="game game-bottom-bottom pending">team</li>
+		<li class="game game-bottom-top ">Reed "deer" Silverstein<span>13</span></li>
+		<li class="game game-bottom-bottom ">Justin "the rookie" Wang</li>
 
 		<li class="spacer">&nbsp;</li>
 	</ul>
 	<ul class="round round-4">
 		<li class="spacer">&nbsp;</li>
 
-		<li class="game game-top-top pending">winning<span>0</span></li>
-		<li class="game game-top-bottom pending">team </li>
+		<li class="game game-top-top winner">Chantal "Hit Girl" Anderson<span>21</span></li>
+		<li class="game game-top-bottom winner">Nicolas "Oh la la so deep" Cabrera </li>
 		<li class="game game-spacer"><span class="time">4:30 - Championship Battle</span></li>
-		<li class="game game-bottom-top pending">winning<span>0</span></li>
-		<li class="game game-bottom-bottom pending">team</li>
+		<li class="game game-bottom-top">Andy "Slow hands" Trejo<span>19</span></li>
+		<li class="game game-bottom-bottom">Grant "Master Splinter" Empey</li>
 
 		<li class="spacer">&nbsp;</li>
 	</ul>
